Switched to virtual threads